@@ -2,12 +2,12 @@
  * ***** BEGIN LICENSE BLOCK *****
  * Zimbra Collaboration Suite Server
  * Copyright (C) 2005, 2006, 2007, 2009, 2010 Zimbra, Inc.
- * 
+ *
  * The contents of this file are subject to the Zimbra Public License
  * Version 1.3 ("License"); you may not use this file except in
  * compliance with the License.  You may obtain a copy of the License at
  * http://www.zimbra.com/license.
- * 
+ *
  * Software distributed under the License is distributed on an "AS IS"
  * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied.
  * ***** END LICENSE BLOCK *****
@@ -31,21 +31,21 @@ import com.google.common.base.Joiner;
  * handles being left open too long.  The side effect is a larger
  * memory footprint.  Code that deals with large result
  * sets should use the JDBC <code>ResultSet</code> class directly.<p>
- * 
+ *
  * Conveniences:
  * <ul>
  *   <li>try/catch blocks that handle <code>SQLException</code> are not required.</li>
  *   <li>Data can be accessed either by calling {@link #next()} or directly by
  *       the row number.</li>
  *   <li>Calling {@link #next()} is not necessary for one-row results.</li>
- *   <li>Result set size is available via the {@link #size()} method.</li> 
+ *   <li>Result set size is available via the {@link #size()} method.</li>
  * </ul>
- * 
+ *
  * All API's that reference row and column indexes are 1-based, to match the behavior
  * of the JDBC <code>ResultSet</code> class.
- * 
+ *
  * @see com.zimbra.cs.db.DbUtil
- *  
+ *
  * @author bburtin
  */
 public class DbResults {
@@ -53,12 +53,12 @@ public class DbResults {
     private List<Object[]> data = new ArrayList<Object[]>();
     private Map<String, Integer> columnIndexes = new LinkedHashMap<String, Integer>();
     private int rowNum = 0;
-    
+
     /**
      * Constructs a <code>DbResults</code> object from the specified JDBC
      * <code>ResultSet</code>.  Reads the entire data set into memory
      * and closes the <code>ResultSet</code>.
-     * 
+     *
      * @throws SQLException
      */
     public DbResults(ResultSet resultSet) throws SQLException {
@@ -75,7 +75,7 @@ public class DbResults {
                 ResultSetMetaData md = resultSet.getMetaData();
                 numCols = md.getColumnCount();
                 for (int i = 1; i <= numCols; i++) {
-                    columnIndexes.put(md.getColumnName(i), new Integer(i));
+                    columnIndexes.put(md.getColumnName(i), Integer.valueOf(i));
                 }
                 isFirst = false;
             }
@@ -86,22 +86,22 @@ public class DbResults {
             }
             data.add(row);
         }
-        
+
         resultSet.close();
     }
 
     /**
      * Returns the number of rows in the result set.
-     * 
+     *
      * @return the number of rows
      */
     public int size() {
         return data.size();
     }
-    
+
     /**
      * Iterates to the next row in the result set.
-     * 
+     *
      * @return <code>true</code> if another row is available.
      */
     public boolean next() {
@@ -111,14 +111,14 @@ public class DbResults {
         rowNum++;
         return true;
     }
-    
+
     /**
      * Returns the row of data at the specified index.
      */
     public Object[] getRow(int row) {
         return data.get(row - 1);
     }
-    
+
     ////////// Null checks //////////
 
     /**
@@ -129,7 +129,7 @@ public class DbResults {
         Object[] rowData = getRow(row);
         return (rowData[col - 1] == null);
     }
-    
+
     /**
      * Returns <code>true</code> if the cell at the specified
      * column for the current row is <code>null</code>.
@@ -145,7 +145,7 @@ public class DbResults {
     public boolean isNull(int row, String colName) {
         return isNull(row, getIndex(colName));
     }
-    
+
     /**
      * Returns <code>true</code> if the cell at the specified
      * column for the current row is <code>null</code>.
@@ -153,7 +153,7 @@ public class DbResults {
     public boolean isNull(String colName) {
         return isNull(getRowNum(), colName);
     }
-    
+
     ////////// Object accessors //////////
 
     /**
@@ -172,7 +172,7 @@ public class DbResults {
     public Object getObject(int col) {
         return getObject(getRowNum(), col);
     }
-    
+
     /**
      * Returns the <code>Object</code> at the specified
      * row and column.
@@ -180,7 +180,7 @@ public class DbResults {
     public Object getObject(int row, String colName) {
         return getObject(row, getIndex(colName));
     }
-    
+
     /**
      * Returns the <code>Object</code> at the specified column in the
      * current row.
@@ -188,9 +188,9 @@ public class DbResults {
     public Object getObject(String colName) {
         return getObject(getRowNum(), getIndex(colName));
     }
-    
+
     ////////// String accessors //////////
-    
+
     /**
      * Returns the <code>String</code> at the specified
      * row and column.
@@ -198,7 +198,7 @@ public class DbResults {
     public String getString(int row, int col) {
         return (String) getObject(row, col);
     }
-    
+
     /**
      * Returns the <code>String</code> at the specified column in the
      * current row.
@@ -206,7 +206,7 @@ public class DbResults {
     public String getString(int col) {
         return getString(getRowNum(), col);
     }
-    
+
     /**
      * Returns the <code>String</code> at the specified
      * row and column.
@@ -214,7 +214,7 @@ public class DbResults {
     public String getString(int row, String colName) {
         return getString(row, getIndex(colName));
     }
-    
+
     /**
      * Returns the <code>String</code> at the specified column in the
      * current row.
@@ -222,7 +222,7 @@ public class DbResults {
     public String getString(String colName) {
         return getString(getRowNum(), colName);
     }
-    
+
     ////////// int accessors //////////
 
     /**
@@ -236,7 +236,7 @@ public class DbResults {
         }
         return i.intValue();
     }
-    
+
     /**
      * Returns the integer at the specified column in the
      * current row.
@@ -244,7 +244,7 @@ public class DbResults {
     public int getInt(int col) {
         return getInt(getRowNum(), col);
     }
-    
+
     /**
      * Returns the integer at the specified
      * row and column.
@@ -252,7 +252,7 @@ public class DbResults {
     public int getInt(int row, String colName) {
         return getInt(row, getIndex(colName));
     }
-    
+
     /**
      * Returns the integer at the specified column in the
      * current row.
@@ -260,7 +260,7 @@ public class DbResults {
     public int getInt(String colName) {
         return getInt(getRowNum(), colName);
     }
-    
+
     ////////// boolean accessors //////////
 
     /**
@@ -278,7 +278,7 @@ public class DbResults {
         int i = ((Number) o).intValue();
         return (i == 0) ? false : true;
     }
-    
+
     /**
      * Returns the boolean at the specified column in the
      * current row.
@@ -286,7 +286,7 @@ public class DbResults {
     public boolean getBoolean(int col) {
         return getBoolean(getRowNum(), col);
     }
-    
+
     /**
      * Returns the boolean at the specified
      * row and column.
@@ -294,7 +294,7 @@ public class DbResults {
     public boolean getBoolean(int row, String colName) {
         return getBoolean(row, getIndex(colName));
     }
-    
+
     /**
      * Returns the boolean at the specified column in the
      * current row.
@@ -302,7 +302,7 @@ public class DbResults {
     public boolean getBoolean(String colName) {
         return getBoolean(getRowNum(), colName);
     }
-    
+
     ////////// Private methods  //////////
 
     private int getIndex(String colName) {
@@ -319,9 +319,9 @@ public class DbResults {
         }
         return rowNum;
     }
-    
+
     private static final Joiner COMMA_JOINER = Joiner.on(",").useForNull("<NULL>");
-    
+
     @Override
     public String toString() {
         StringBuilder buf = new StringBuilder();
